src/tests/ci/assignment_5_functions/invalid_semantic/01_function_duplicate_def.c
int add(int a, int b) {
    return a + b;
}

int add(int a, int b) {
    return a + b + 1;
}

int main() {
    return 0;
}